# MCP-Server---Gmail-Plugin-for-Claude-Desktop

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/gmail_plugin/: server.py
